# SwipeAPI

./: .env.dev  .env.prod  .env.prod.db  .gitignore  Dockerfile  Dockerfile.prod  Makefile  celerybeat-schedule  data_init.json  db.json  docker-compose.prod.yml  docker-compose.yml  dump.rdb  entrypoint.sh  manage.py  pyproject.toml  pytest.ini  requirements.txt
SwipeAPI/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
admin/: models.py  serializers.py  urls.py  utils.py  views.py
admin/migrations/: 0001_initial.py
admin/tests/: conftest.py  notary_tests.py
builder/: models.py  permissions.py  serializers.py  urls.py  views.py
builder/migrations/: 0001_initial.py  0002_initial.py  0003_alter_apartment_complex_alter_apartment_floor_and_more.py  0003_alter_apartment_price_alter_apartment_square.py  0003_alter_complex_address_alter_complex_builder_and_more.py  0004_alter_apartment_price_alter_apartment_square.py  0004_alter_apartment_unique_together.py  0004_rename_benefit_complex_benefits_remove_sewer_complex_and_more.py  0005_alter_apartment_unique_together.py  0005_apartment_is_booked.py  0006_chessboardaddingrequest.py  0007_apartment_is_active.py  0008_remove_apartment_is_active_apartment_is_moderated_and_more.py  0009_delete_chessboardaddingrequest.py  0010_alter_apartment_price_alter_apartment_square.py  0011_alter_apartment_price_alter_apartment_square.py  0012_apartment_price_per_m2.py  0013_alter_complex_payment_type.py  0014_rename_scheme_floor_schema.py  0015_remove_floor_schema.py  0017_gallerycomplex.py  (+5 more)
client/: models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
nginx/: nginx.conf
users/: models.py  permissions.py  serializers.py  urls.py  views.py
(+54 files in other folders)
